<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="8dp"
    android:elevation="4dp"
    android:padding="12dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvClaveProducto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/clave_del_producto" />

        <TextView
            android:id="@+id/tvNombreProducto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:text="@string/nombre_del_producto" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/descripcion" />

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/precio" />

        <TextView
            android:id="@+id/tvStock"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/stock" />

        <TextView
            android:id="@+id/tvFechaCaducidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvEstado"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:text="@string/estado" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnEditar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_blue_dark"
            app:cardBackgroundColor="@android:color/background_dark" />

        <Button
            android:id="@+id/btnEliminar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:textSize="14sp"
            android:textColor="@android:color/holo_red_dark"
            app:cardBackgroundColor="@android:color/background_dark"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>