<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtNewPassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_contrasena"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="24dp"/>

        <EditText
            android:id="@+id/edtNuevaPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:hint="@string/nuevacontrasena"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edtConfirmarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrasena"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/edit_text"
            tools:ignore="Autofill,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnGuardarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/enter_bottom"
            android:text="@string/guardar_nueva_contrasena"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

</ScrollView>