<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtPinMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:text="@string/ingresa_el_pin_enviado_a_tu_correo"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pin"
        android:inputType="number"
        android:maxLength="6"
        android:gravity="center"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnVerificarPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/enter_bottom"
        android:text="@string/verificar_pin"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>