<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.profile.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sky_blue"
            android:padding="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image"
                app:layout_constraintVertical_chainStyle="packed"
                tools:ignore="TextContrastCheck"
                tools:text="Nombre de Usuario" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_container_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idioma"
                style="@style/ProfileOptionItem"
                android:text="@string/idioma" />

            <View style="@style/ProfileDivider" />

            <TextView
                android:id="@+id/notificacion"
                style="@style/ProfileOptionItem"
                android:text="@string/notificacion" />

            <View style="@style/ProfileDivider" />

            <TextView
                android:id="@+id/correo"
                style="@style/ProfileOptionItem"
                android:text="@string/correo" />

            <View style="@style/ProfileDivider" />

            <TextView
                android:id="@+id/ayuda"
                style="@style/ProfileOptionItem"
                android:text="@string/ayuda" />

            <View style="@style/ProfileDivider" />

            <TextView
                android:id="@+id/logout_button"
                style="@style/ProfileOptionItem"
                android:text="@string/cerrar_sesion"
                android:textColor="?attr/colorOnSecondary" />
        </LinearLayout>

        <TextView
            android:id="@+id/version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:padding="8dp" />

    </LinearLayout>
</ScrollView>